--- a/Small World Project.ipynb
+++ b/Small World Project.ipynb
@@ -327,9 +327,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>L(actual)</th>\n",
+       "      <th>L(random)</th>\n",
+       "      <th>C(actual)</th>\n",
+       "      <th>C(random)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Power grid</td>\n",
+       "      <td>18.989185</td>\n",
+       "      <td>8.725193</td>\n",
+       "      <td>0.080104</td>\n",
+       "      <td>0.000890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C. elegans</td>\n",
+       "      <td>3.071560</td>\n",
+       "      <td>2.397830</td>\n",
+       "      <td>0.173557</td>\n",
+       "      <td>0.134677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>3.692507</td>\n",
+       "      <td>2.594260</td>\n",
+       "      <td>0.605547</td>\n",
+       "      <td>0.063226</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Dataset  L(actual)  L(random)  C(actual)  C(random)\n",
+       "0  Power grid  18.989185   8.725193   0.080104   0.000890\n",
+       "1  C. elegans   3.071560   2.397830   0.173557   0.134677\n",
+       "2    Facebook   3.692507   2.594260   0.605547   0.063226"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "G_power_random = G_power.copy()\n",
     "G_celegansneural_random = G_celegansneural.copy().to_undirected()\n",
